# pagereader

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.nix
templates/: index.html
